# factory_model

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/factory_model/: __init__.py
src/factory_model/config/: config.py
src/factory_model/llm/: __init__.py  factory.py  model_AzureAIChat.py  model_AzureOpenAIChat.py  model_AzureOpenAIEmbedding.py  model_GoogleAIChat.py  model_GoogleAIEmbedding.py  model_HFEmbedding.py  model_LMEmbedding.py  model_LMStudioChat.py  model_OllamaChat.py  model_OpenAIChat.py  model_OpenAIEmbedding.py  model_base.py  model_base_embedding.py  model_utils.py
src/factory_model/llm/auth_clients/: __init__.py  azure.py
src/factory_model/logger/: __init__.py  logger.py  logger_config.py  utils.py
src/factory_model/security/: __init__.py
